--- a/src/02-video.html
+++ b/src/02-video.html
@@ -5,18 +5,17 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Video playback</title>
+  <title>Homework 8</title>
   <link rel="icon" href="./images/javascript.svg" />
   <link rel="stylesheet" href="css/common.css" />
 </head>
 
 <body>
-  <p><a href="index.html">Go back</a></p>
-
-  <iframe id="vimeo-player" src="https://player.vimeo.com/video/236203659" width="640" height="360" frameborder="0"
-    allowfullscreen allow="autoplay; encrypted-media"></iframe>
-
-  <script src="js/02-video.js" type="module"></script>
+  <ul>
+    <li><a href="01-gallery.html">Image gallery</a></li>
+    <li><a href="02-video.html">Video playback</a></li>
+    <li><a href="03-feedback.html">Feedback form</a></li>
+  </ul>
 </body>
 
 </html>
